printf() battery status every 10s. Support N2K_PRINTF

--- a/software/pic18_mppt/Makefile
+++ b/software/pic18_mppt/Makefile
@@ -8,8 +8,9 @@ IVECT_BASE=0x608
 CC= xc8-cc -mcpu=18f27q84 -mno-config -mkeep-startup -O2
 CC+= -mcodeoffset=${ROM_BASE} -mreserve=rom@0x10000:0x1ffff -mreserve=ram@0x3700:0x37ff
 CFLAGS= -DIVECT_BASE=${IVECT_BASE} -I${.CURDIR} -I${.CURDIR}/../../../pic18_n2k
+CFLAGS+= -DN2K_PRINTF
 OBJECTS= main.p1 serial.p1 i2c.p1 nmea2000.p1 ntc_tab.p1 font10x16.p1 font5x8.p1 icons16x16.p1
-HEADERS= serial.h nmea2000.h nmea2000_pgn.h nmea2000_user.h i2c.h nmea2000_pic18_ecan.c ntc_tab.h font10x16.h font5x8.h icons16x16.h pac195x.h vers.h
+HEADERS= serial.h nmea2000.h nmea2000_pgn.h nmea2000_user.h i2c.h nmea2000_pic18_ecan.c nmea2000_printf.c ntc_tab.h font10x16.h font5x8.h icons16x16.h pac195x.h vers.h
 
 all: solarmppt.hex
 
